fix save data modul and project (spacing issue)

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -32,7 +32,7 @@ body,
 }
 
 .select2-container {
-    z-index: 30 !important;
+    z-index: 20 !important;
 }
 
 .select2-dropdown {
